Añadiendo cambio control de vistas gráficas

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -51,13 +51,13 @@
             <div class="col-6 contenidoVistaGeneralEnergy">
                 <div class="row">
 
-                    <!--                    Cambio animación del texto de consumo diario actual a mensual-->
+                    <!-- Visibilidad Semanal -->
                     <div class="contenidoConsumoEnergy" id="contenidoConsumoEnergyActual">
                         <h3>Consumo diario actual</h3>
                         <span id="cantidadConsumoEnergyActual">50 kWh</span>
                     </div>
 
-                    <!--                    <Cambio animación del texto de consumo diario actual a mensual-->
+                    <!-- Visibilidad Mensual -->
                     <div class="contenidoConsumoEnergy" id="contenidoConsumoEnergyMensual">
                         <h3>Consumo mensual</h3>
                         <span id="cantidadConsumoEnergyMensual">500 kWh</span>
