--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,31 +33,28 @@
                 <img src="img/iconElRincon.png" alt="Imagen del logo IES_ElRincón" width="170" height="170">
             </div>
         </div>
-
-        <div class="contenidoHeaderVistas">
-            <div class="contenidoHeaderEnergy">
-                <img src="img/vectorEnergy.svg" alt="Imagen energía">
-                <h2>Energía</h2>
-            </div>
-            <div class="contenidoHeaderAgua">
-                <img src="img/vectorAgua.svg" alt="Imagen energía">
-                <h2>Agua</h2>
-            </div>
-        </div>
     </header>
 
     <main class="contenidoMain" id="contenidoMain">
         <section id="contenidoVistaGeneral" class="row contenidoVistaGeneral">
             <div class="col-6 contenidoVistaGeneralEnergy">
                 <div class="row">
+                    <div class="col-12 contenidoHeaderVistas">
+                        <div class="contenidoHeaderEnergy">
+                            <img src="img/vectorEnergy.svg" alt="Imagen energía">
+                            <h2>Energía</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
 
-                    <!-- Visibilidad Semanal -->
+                    <!--                    Cambio animación del texto de consumo diario actual a mensual-->
                     <div class="contenidoConsumoEnergy" id="contenidoConsumoEnergyActual">
                         <h3>Consumo diario actual</h3>
                         <span id="cantidadConsumoEnergyActual">50 kWh</span>
                     </div>
 
-                    <!-- Visibilidad Mensual -->
+                    <!--                    <Cambio animación del texto de consumo diario actual a mensual-->
                     <div class="contenidoConsumoEnergy" id="contenidoConsumoEnergyMensual">
                         <h3>Consumo mensual</h3>
                         <span id="cantidadConsumoEnergyMensual">500 kWh</span>
@@ -70,6 +67,12 @@
 
             <div class="col-6 contenidoVistaGeneralAgua">
                 <div class="row">
+                    <div class="contenidoHeaderVistas contenidoHeaderAgua">
+                        <div class="contenidoHeaderAgua">
+                            <img src="img/vectorAgua.svg" alt="Imagen energía">
+                            <h2>Agua</h2>
+                        </div>
+                    </div>
                     <div class="contenidoConsumoAgua" id="contenidoConsumoAguaActual">
                         <h3>Consumo diario actual</h3>
                         <span id="cantidadConsumoAguaActual">3.375 L</span>
