Renombre de constantes de ficheros js

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -97,8 +97,8 @@
 
 <!-- Prepare a DOM with a defined width and height for ECharts -->
 <script src="js/controlVistasGráficas.js"></script>
-<script type="module" src="js/semanalAgua.js"></script>
-<script src="js/semanalEnergy.js"></script>
+<script src="js/graficaSemanalAgua.js"></script>
+<script src="js/graficaSemanalEnergy.js"></script>
 <script type="module" src="js/api-service.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
