Más orden y comentarios en html y css

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -34,7 +34,7 @@
         </div>
     </header>
 
-    <main class="contenidoMain" id="contenidoMain">
+    <main class="container-fluid contenidoMain" id="contenidoMain">
         <div class="row contenidoVistaGeneral">
 
             <!-- ------------------------------ -->
