--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -54,7 +54,7 @@
 
                     <!-- Vista del consumo SEMANAL de energía. Inicialmente visible.
                     Cambiará cada x tiempo por la vista del consumo mensual de energía -->
-                    <div class="col-12 contenidoConsumoEnergy" id="contenidoConsumoEnergyActual">
+                    <div class="col-12 contenidoConsumoEnergy" id="contenidoConsumoEnergy">
                         <h3>Consumo diario actual</h3>
                         <span id="cantidadConsumoEnergyActual">50 kWh</span>
                     </div>
@@ -64,10 +64,10 @@
 
                     <!-- Vista del consumo MENSUAL de energía. Inicialmente oculto.
                     Cambiará cada x tiempo por la vista del consumo semanal de energía -->
-                    <div class="col-12 contenidoConsumoEnergy" id="contenidoConsumoEnergyMensual">
-                        <h3>Consumo mensual</h3>
-                        <span id="cantidadConsumoEnergyMensual">500 kWh</span>
-                    </div>
+<!--                    <div class="col-12 contenidoConsumoEnergy" id="contenidoConsumoEnergyMensual">-->
+<!--                        <h3>Consumo mensual actual </h3>-->
+<!--                        <span id="cantidadConsumoEnergyMensual">500 kWh</span>-->
+<!--                    </div>-->
 
                     <div class="contenidoGraficaConsumoEnergy" id="graficaMensualEnergy"></div>
                     <!-- ----------------------------------------------------------------------- -->
@@ -92,7 +92,7 @@
 
                     <!-- Vista del consumo SEMANAL del agua. Inicialmente visible.
                     Cambiará cada x tiempo por la vista del consumo mensual del agua -->
-                    <div class="col-12 contenidoConsumoAgua" id="contenidoConsumoAguaActual">
+                    <div class="col-12 contenidoConsumoAgua" id="contenidoConsumoAgua">
                         <h3>Consumo diario actual</h3>
                         <span id="cantidadConsumoAguaActual">3.375 L</span>
                     </div>
@@ -102,10 +102,10 @@
 
                     <!-- Vista del consumo MENSUAL del agua. Inicialmente oculto.
                     Cambiará cada x tiempo por la vista del consumo semanal del agua -->
-                    <div class="col-12 contenidoConsumoAgua" id="contenidoConsumoAguaMensual">
-                        <h3>Consumo mensual</h3>
-                        <span id="cantidadConsumoAguaMensual">8.375 L</span>
-                    </div>
+<!--                    <div class="col-12 contenidoConsumoAgua" id="contenidoConsumoAguaMensual">-->
+<!--                        <h3>Consumo mensual actual</h3>-->
+<!--                        <span id="cantidadConsumoAguaMensual">8.375 L</span>-->
+<!--                    </div>-->
 
                     <div class="contenidoGraficaConsumoAgua" id="graficaMensualAgua"></div>
                     <!-- ----------------------------------------------------------------------- -->
@@ -120,10 +120,14 @@
     <!--    <footer class="contenidoFooter"></footer>-->
 </div>
 
-<!-- Prepare a DOM with a defined width and height for ECharts -->
 <script src="js/controlVistasGráficas.js"></script>
-<script src="js/graficaSemanalAgua.js"></script>
+
 <script src="js/graficaSemanalEnergy.js"></script>
+<script src="js/graficaMensualEnergy.js"></script>
+
+<script src="js/graficaSemanalAgua.js"></script>
+<script src="js/graficaMensualAgua.js"></script>
+
 <script type="module" src="js/api-service.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
