Haciendo que el consumo actual se genere desde js

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -54,10 +54,7 @@
 
                     <!-- Vista del consumo SEMANAL de energía. Inicialmente visible.
                     Cambiará cada x tiempo por la vista del consumo mensual de energía -->
-                    <div class="col-12 contenidoConsumoEnergy" id="contenidoConsumoEnergy">
-                        <h3>Consumo diario actual</h3>
-                        <span id="cantidadConsumoEnergyActual">50 kWh</span>
-                    </div>
+                    <div class="col-12 contenidoConsumoEnergy" id="contenidoConsumoEnergy"></div>
 
                     <div class="contenidoGraficaConsumoEnergy" id="graficaSemanalEnergy"></div>
                     <!-- ----------------------------------------------------------------------- -->
@@ -92,10 +89,7 @@
 
                     <!-- Vista del consumo SEMANAL del agua. Inicialmente visible.
                     Cambiará cada x tiempo por la vista del consumo mensual del agua -->
-                    <div class="col-12 contenidoConsumoAgua" id="contenidoConsumoAgua">
-                        <h3>Consumo diario actual</h3>
-                        <span id="cantidadConsumoAguaActual">3.375 L</span>
-                    </div>
+                    <div class="col-12 contenidoConsumoAgua" id="contenidoConsumoAgua"></div>
 
                     <div class="contenidoGraficaConsumoAgua" id="graficaSemanalAgua"></div>
                     <!-- ----------------------------------------------------------------------- -->
