--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -54,17 +54,20 @@
 
                     <!-- Vista del consumo SEMANAL de energía. Inicialmente visible.
                     Cambiará cada x tiempo por la vista del consumo mensual de energía -->
-                    <div class="col-12 contenidoConsumoEnergy" id="contenidoConsumoEnergy"></div>
+                    <div class="col-12 contenidoConsumoEnergy" id="contenidoConsumoEnergyActual">
+                        <h3>Consumo diario actual</h3>
+                        <span id="cantidadConsumoEnergyActual">50 kWh</span>
+                    </div>
 
                     <div class="contenidoGraficaConsumoEnergy" id="graficaSemanalEnergy"></div>
                     <!-- ----------------------------------------------------------------------- -->
 
                     <!-- Vista del consumo MENSUAL de energía. Inicialmente oculto.
                     Cambiará cada x tiempo por la vista del consumo semanal de energía -->
-<!--                    <div class="col-12 contenidoConsumoEnergy" id="contenidoConsumoEnergyMensual">-->
-<!--                        <h3>Consumo mensual actual </h3>-->
-<!--                        <span id="cantidadConsumoEnergyMensual">500 kWh</span>-->
-<!--                    </div>-->
+                    <div class="col-12 contenidoConsumoEnergy" id="contenidoConsumoEnergyMensual">
+                        <h3>Consumo mensual actual </h3>
+                        <span id="cantidadConsumoEnergyMensual">500 kWh</span>
+                    </div>
 
                     <div class="contenidoGraficaConsumoEnergy" id="graficaMensualEnergy"></div>
                     <!-- ----------------------------------------------------------------------- -->
@@ -89,17 +92,20 @@
 
                     <!-- Vista del consumo SEMANAL del agua. Inicialmente visible.
                     Cambiará cada x tiempo por la vista del consumo mensual del agua -->
-                    <div class="col-12 contenidoConsumoAgua" id="contenidoConsumoAgua"></div>
+                    <div class="col-12 contenidoConsumoAgua" id="contenidoConsumoAguaActual">
+                        <h3>Consumo diario actual</h3>
+                        <span id="cantidadConsumoAguaActual">3.375 L</span>
+                    </div>
 
                     <div class="contenidoGraficaConsumoAgua" id="graficaSemanalAgua"></div>
                     <!-- ----------------------------------------------------------------------- -->
 
                     <!-- Vista del consumo MENSUAL del agua. Inicialmente oculto.
                     Cambiará cada x tiempo por la vista del consumo semanal del agua -->
-<!--                    <div class="col-12 contenidoConsumoAgua" id="contenidoConsumoAguaMensual">-->
-<!--                        <h3>Consumo mensual actual</h3>-->
-<!--                        <span id="cantidadConsumoAguaMensual">8.375 L</span>-->
-<!--                    </div>-->
+                    <div class="col-12 contenidoConsumoAgua" id="contenidoConsumoAguaMensual">
+                        <h3>Consumo mensual actual</h3>
+                        <span id="cantidadConsumoAguaMensual">8.375 L</span>
+                    </div>
 
                     <div class="contenidoGraficaConsumoAgua" id="graficaMensualAgua"></div>
                     <!-- ----------------------------------------------------------------------- -->
@@ -114,13 +120,13 @@
     <!--    <footer class="contenidoFooter"></footer>-->
 </div>
 
-<script src="js/controlVistasGráficas.js"></script>
+<!--<script src="js/controlVistasGráficas.js"></script>-->
 
 <script src="js/graficaSemanalEnergy.js"></script>
-<script src="js/graficaMensualEnergy.js"></script>
+<!--<script src="js/graficaMensualEnergy.js"></script>-->
 
 <script src="js/graficaSemanalAgua.js"></script>
-<script src="js/graficaMensualAgua.js"></script>
+<!--<script src="js/graficaMensualAgua.js"></script>-->
 
 <script type="module" src="js/api-service.js"></script>
 
