Estructurando cajas gráficas

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -69,8 +69,11 @@
                         </div>
                     </div>
 
-                    <div class="contenidoGraficaConsumoEnergy" id="graficaSemanalEnergy"></div>
-                    <div class="contenidoGraficaConsumoEnergy" id="graficaMensualEnergy"></div>
+                    <div class="contenidoGraficaConsumoEnergy">
+                        <div id="graficaSemanalEnergy"></div>
+                        <div id="graficaMensualEnergy"></div>
+                    </div>
+<!--                    <div class="contenidoGraficaConsumoEnergy" id="graficaMensualEnergy"></div>-->
                     <!-- ----------------------------------------------------------------------- -->
                 </div>
             </section>
@@ -106,8 +109,11 @@
                         </div>
                     </div>
 
-                    <div class="contenidoGraficaConsumoAgua" id="graficaSemanalAgua"></div>
-                    <div class="contenidoGraficaConsumoAgua" id="graficaMensualAgua"></div>
+                    <div class="contenidoGraficaConsumoAgua">
+                        <div id="graficaSemanalAgua"></div>
+                        <div id="graficaMensualAgua"></div>
+                    </div>
+<!--                    <div class="contenidoGraficaConsumoAgua" id="graficaMensualAgua"></div>-->
                     <!-- ----------------------------------------------------------------------- -->
 
                 </div>
@@ -125,7 +131,7 @@
 <script src="js/graficas/graficaSemanalEnergy.js"></script>
 <!--<script src="js/graficaMensualEnergy.js"></script>-->
 
-<script src="js/graficas/graficaSemanalAgua.js"></script>
+<script type="module" src="js/graficas/graficaSemanalAgua.js"></script>
 <!--<script src="js/graficaMensualAgua.js"></script>-->
 
 <script type="module" src="js/api-service.js"></script>
