Solución cambio vista graficas cerca

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -129,10 +129,10 @@
 <script src="js/controlVistas.js"></script>
 
 <script src="js/graficas/graficaSemanalEnergy.js"></script>
-<!--<script src="js/graficaMensualEnergy.js"></script>-->
+<script src="js/graficas/graficaMensualEnergy.js"></script>
 
 <script type="module" src="js/graficas/graficaSemanalAgua.js"></script>
-<!--<script src="js/graficaMensualAgua.js"></script>-->
+<script src="js/graficas/graficaMensualAgua.js"></script>
 
 <script type="module" src="js/api-service.js"></script>
 
