Cambio vista gráfica aplicado

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -57,14 +57,14 @@
                         <!-- Vista del consumo SEMANAL de energía. Inicialmente visible.
                         Cambiará cada x tiempo por la vista del consumo mensual de energía -->
                         <div id="contenidoConsumoEnergyActual">
-                            <h3>Consumo diario actual</h3>
+                            <h3>Consumo DIARIO actual</h3>
                             <span id="cantidadConsumoEnergyActual">50 kWh</span>
                         </div>
 
                         <!-- Vista del consumo MENSUAL de energía. Inicialmente oculto.
                         Cambiará cada x tiempo por la vista del consumo semanal de energía -->
                         <div id="contenidoConsumoEnergyMensual">
-                            <h3>Consumo mensual actual </h3>
+                            <h3>Consumo MENSUAL actual </h3>
                             <span id="cantidadConsumoEnergyMensual">500 kWh</span>
                         </div>
                     </div>
@@ -97,14 +97,14 @@
                         <!-- Vista del consumo SEMANAL del agua. Inicialmente visible.
                         Cambiará cada x tiempo por la vista del consumo mensual del agua -->
                         <div id="contenidoConsumoAguaActual">
-                            <h3>Consumo diario actual</h3>
+                            <h3>Consumo DIARIO actual</h3>
                             <span id="cantidadConsumoAguaActual">3.375 L</span>
                         </div>
 
                         <!-- Vista del consumo MENSUAL del agua. Inicialmente oculto.
                         Cambiará cada x tiempo por la vista del consumo semanal del agua -->
                         <div id="contenidoConsumoAguaMensual">
-                            <h3>Consumo mensual actual</h3>
+                            <h3>Consumo MENSUAL actual</h3>
                             <span id="cantidadConsumoAguaMensual">8.375 L</span>
                         </div>
                     </div>
