--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -71,9 +71,10 @@
 
                     <div class="contenidoGraficaConsumoEnergy">
                         <div id="graficaSemanalEnergy"></div>
+
+                        <!-- Posición absoluta. Inicialmente invisible-->
                         <div id="graficaMensualEnergy"></div>
                     </div>
-<!--                    <div class="contenidoGraficaConsumoEnergy" id="graficaMensualEnergy"></div>-->
                     <!-- ----------------------------------------------------------------------- -->
                 </div>
             </section>
@@ -111,9 +112,10 @@
 
                     <div class="contenidoGraficaConsumoAgua">
                         <div id="graficaSemanalAgua"></div>
+
+                        <!-- Posición absoluta. Inicialmente invisible-->
                         <div id="graficaMensualAgua"></div>
                     </div>
-<!--                    <div class="contenidoGraficaConsumoAgua" id="graficaMensualAgua"></div>-->
                     <!-- ----------------------------------------------------------------------- -->
 
                 </div>
