Proceso de construcción

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -19,6 +19,7 @@
 
 <body>
 
+<div class="tempoConstruccion"><h1>En proceso de construcción (Smartecoschool) ⚙</h1></div>
 <div id="main">
     <header class="container-fluid">
         <div class="row contenidoHeader">
@@ -125,7 +126,9 @@
 
     </main>
 
-    <!--    <footer class="contenidoFooter"></footer>-->
+<!--    <footer class="contenidoFooter">-->
+<!--        <h1>En proceso de construcción (Smartecoschool) ⚙</h1>-->
+<!--    </footer>-->
 </div>
 
 <script src="js/controlVistas.js"></script>
