Iniciar con datos reales graficas

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -19,7 +19,7 @@
 
 <body>
 
-<div class="tempoConstruccion"><h1>En proceso de construcción (Smartecoschool) ⚙</h1></div>
+<!--<div class="tempoConstruccion"><h1>En proceso de construcción (Smartecoschool)</h1></div>-->
 <div id="main">
     <header class="container-fluid">
         <div class="row contenidoHeader">
@@ -127,16 +127,16 @@
     </main>
 
 <!--    <footer class="contenidoFooter">-->
-<!--        <h1>En proceso de construcción (Smartecoschool) ⚙</h1>-->
+<!--        <h1>En proceso de construcción (Smartecoschool)</h1>-->
 <!--    </footer>-->
 </div>
 
 <script src="js/controlVistas.js"></script>
 
 <script src="js/graficas/graficaSemanalEnergy.js"></script>
-<script src="js/graficas/graficaMensualEnergy.js"></script>
-
 <script type="module" src="js/graficas/graficaSemanalAgua.js"></script>
+
+<script src="js/graficas/graficaMensualEnergy.js"></script>
 <script src="js/graficas/graficaMensualAgua.js"></script>
 
 <script type="module" src="js/api-service.js"></script>
