Ajuste html y graficaSemanalAgua.js algunos datos

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,18 +20,16 @@
 <body>
 
 <!--<div class="tempoConstruccion"><h1>En proceso de construcción (Smartecoschool)</h1></div>-->
-<div id="main">
-    <header class="container-fluid">
-        <div class="row contenidoHeader">
-            <div class="col-2 imagenHeader logo-img-header-SES">
-                <img src="img/iconSES.png" alt="Imagen de consumo de agua y luz" width="752" height="583">
-            </div>
-            <div class="col-8 contenidoHeaderTitulo">
-                <h1>Estadísticas de Consumo de Agua y Luz</h1>
-            </div>
-            <div class="col-2 imagenHeader logo-img-header-Rincon">
-                <img src="img/iconElRincon.png" alt="Imagen del logo IES_ElRincón" width="1280" height="1329">
-            </div>
+<div class="container">
+    <header class="row contenidoHeader">
+        <div class="col-2 imagenHeader logo-img-header-SES">
+            <img src="img/iconSES.png" alt="Imagen de consumo de agua y luz" width="752" height="583">
+        </div>
+        <div class="col-8 contenidoHeaderTitulo">
+            <h1>Estadísticas de Consumo de Agua y Luz</h1>
+        </div>
+        <div class="col-2 imagenHeader logo-img-header-Rincon">
+            <img src="img/iconElRincon.png" alt="Imagen del logo IES_ElRincón" width="1280" height="1329">
         </div>
     </header>
 
@@ -126,17 +124,17 @@
 
     </main>
 
-<!--    <footer class="contenidoFooter">-->
-<!--        <h1>En proceso de construcción (Smartecoschool)</h1>-->
-<!--    </footer>-->
+    <!--    <footer class="contenidoFooter">-->
+    <!--        <h1>En proceso de construcción (Smartecoschool) ⚙</h1>-->
+    <!--    </footer>-->
 </div>
 
 <script src="js/controlVistas.js"></script>
 
-<script src="js/graficas/graficaSemanalEnergy.js"></script>
-<script type="module" src="js/graficas/graficaSemanalAgua.js"></script>
-
+<script type="module" src="js/graficas/graficaSemanalEnergy.js"></script>
 <script src="js/graficas/graficaMensualEnergy.js"></script>
+
+<script type="module" src="js/graficas/graficaSemanalAgua.js"></script>
 <script src="js/graficas/graficaMensualAgua.js"></script>
 
 <script type="module" src="js/api-service.js"></script>
