Diferentes versiones index.html

--- a/src/main/webapp/version2.html
+++ b/src/main/webapp/version2.html
@@ -57,7 +57,7 @@
                         Cambiará cada x tiempo por la vista del consumo mensual de energía -->
                         <div id="contenidoConsumoEnergyActual">
                             <h3>Consumo DIARIO actual</h3>
-                            <span id="cantidadConsumoEnergyActual">___</span>
+                            <span id="cantidadConsumoEnergyActual">50 kWh</span>
                         </div>
 
                         <!-- Vista del consumo MENSUAL de energía. Inicialmente oculto.
@@ -98,7 +98,7 @@
                         Cambiará cada x tiempo por la vista del consumo mensual del agua -->
                         <div id="contenidoConsumoAguaActual">
                             <h3>Consumo DIARIO actual</h3>
-                            <span id="cantidadConsumoAguaActual">___</span>
+                            <span id="cantidadConsumoAguaActual">3.375 L</span>
                         </div>
 
                         <!-- Vista del consumo MENSUAL del agua. Inicialmente oculto.
