--- a/src/main/webapp/version1.html
+++ b/src/main/webapp/version1.html
@@ -55,16 +55,16 @@
                     <div class="col-12 contenidoConsumoEnergy">
                         <!-- Vista del consumo SEMANAL de energía. Inicialmente visible.
                         Cambiará cada x tiempo por la vista del consumo mensual de energía -->
-                        <div id="contenidoConsumoEnergyActual">
-                            <h3>Consumo DIARIO actual</h3>
-                            <span id="cantidadConsumoEnergyActual">___</span>
+                        <div id="contenidoConsumoEnergyActual" class="row">
+                            <div class="col-6"><h3>Consumo DIARIO actual</h3></div>
+                            <div class="col-6"><span id="cantidadConsumoEnergyActual">50 kWh</span></div>
                         </div>
 
                         <!-- Vista del consumo MENSUAL de energía. Inicialmente oculto.
                         Cambiará cada x tiempo por la vista del consumo semanal de energía -->
-                        <div id="contenidoConsumoEnergyMensual">
-                            <h3>Consumo MENSUAL actual </h3>
-                            <span id="cantidadConsumoEnergyMensual">500 kWh</span>
+                        <div id="contenidoConsumoEnergyMensual" class="row">
+                            <div class="col-6"><h3>Consumo MENSUAL actual </h3></div>
+                            <div class="col-6"><span id="cantidadConsumoEnergyMensual">500 kWh</span></div>
                         </div>
                     </div>
 
@@ -96,16 +96,16 @@
                     <div class="col-12 contenidoConsumoAgua">
                         <!-- Vista del consumo SEMANAL del agua. Inicialmente visible.
                         Cambiará cada x tiempo por la vista del consumo mensual del agua -->
-                        <div id="contenidoConsumoAguaActual">
-                            <h3>Consumo DIARIO actual</h3>
-                            <span id="cantidadConsumoAguaActual">___</span>
+                        <div id="contenidoConsumoAguaActual" class="row">
+                            <div class="col-6"><h3>Consumo DIARIO actual</h3></div>
+                            <div class="col-6"><span id="cantidadConsumoAguaActual">3.375 L</span></div>
                         </div>
 
                         <!-- Vista del consumo MENSUAL del agua. Inicialmente oculto.
                         Cambiará cada x tiempo por la vista del consumo semanal del agua -->
-                        <div id="contenidoConsumoAguaMensual">
-                            <h3>Consumo MENSUAL actual</h3>
-                            <span id="cantidadConsumoAguaMensual">8.375 L</span>
+                        <div id="contenidoConsumoAguaMensual" class="row">
+                            <div class="col-6"><h3>Consumo MENSUAL actual</h3></div>
+                            <div class="col-6"><span id="cantidadConsumoAguaMensual">8.375 L</span></div>
                         </div>
                     </div>
 
