--- a/src/main/webapp/version2.html
+++ b/src/main/webapp/version2.html
@@ -15,6 +15,10 @@
 
     <!-- Include the ECharts file you just downloaded -->
     <script src="echarts/dist/echarts.js"></script>
+
+    <!-- Obtener Hash para verificar si hay cambios en la web y poder obtener los nuevos datos -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+
 </head>
 
 <body>
