Cambios diseño en los gráficos

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -129,13 +129,13 @@
     <!--    </footer>-->
 </div>
 
-<!--<script src="js/controlVistas.js"></script>-->
+<script src="js/controlVistas.js"></script>
 
 <script type="module" src="js/graficas/graficaSemanalEnergy.js"></script>
 <script type="module" src="js/graficas/graficaSemanalAgua.js"></script>
 
-<!--<script src="js/graficas/graficaMensualEnergy.js"></script>-->
-<!--<script src="js/graficas/graficaMensualAgua.js"></script>-->
+<script src="js/graficas/graficaMensualEnergy.js"></script>
+<script src="js/graficas/graficaMensualAgua.js"></script>
 
 <script type="module" src="js/api-service.js"></script>
 
