--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -64,7 +64,7 @@
                         Cambiará cada x tiempo por la vista del consumo semanal de energía -->
                         <div id="contenidoConsumoEnergyMensual">
                             <h3>Consumo MENSUAL actual </h3>
-                            <span id="cantidadConsumoEnergyMensual">500 kWh</span>
+                            <span id="cantidadConsumoEnergyMensual">___</span>
                         </div>
                     </div>
 
@@ -105,7 +105,7 @@
                         Cambiará cada x tiempo por la vista del consumo semanal del agua -->
                         <div id="contenidoConsumoAguaMensual">
                             <h3>Consumo MENSUAL actual</h3>
-                            <span id="cantidadConsumoAguaMensual">8.375 L</span>
+                            <span id="cantidadConsumoAguaMensual">___</span>
                         </div>
                     </div>
 
@@ -134,8 +134,8 @@
 <script type="module" src="js/graficas/graficaSemanalEnergy.js"></script>
 <script type="module" src="js/graficas/graficaSemanalAgua.js"></script>
 
-<script src="js/graficas/graficaMensualEnergy.js"></script>
-<script src="js/graficas/graficaMensualAgua.js"></script>
+<script type="module" src="js/graficas/graficaMensualEnergy.js"></script>
+<script type="module" src="js/graficas/graficaMensualAgua.js"></script>
 
 <script type="module" src="js/api-service.js"></script>
 
