Gráficas mensuales sin leyenda

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -63,7 +63,7 @@
                         <!-- Vista del consumo MENSUAL de energía. Inicialmente oculto.
                         Cambiará cada x tiempo por la vista del consumo semanal de energía -->
                         <div id="contenidoConsumoEnergyMensual">
-                            <h3>Consumo MENSUAL actual </h3>
+                            <h3>Consumo del MES actual </h3>
                             <span id="cantidadConsumoEnergyMensual">___</span>
                         </div>
                     </div>
@@ -104,7 +104,7 @@
                         <!-- Vista del consumo MENSUAL del agua. Inicialmente oculto.
                         Cambiará cada x tiempo por la vista del consumo semanal del agua -->
                         <div id="contenidoConsumoAguaMensual">
-                            <h3>Consumo MENSUAL actual</h3>
+                            <h3>Consumo del MES actual</h3>
                             <span id="cantidadConsumoAguaMensual">___</span>
                         </div>
                     </div>
@@ -133,6 +133,7 @@
 
 <script type="module" src="js/graficas/graficaSemanalEnergy.js"></script>
 <script type="module" src="js/graficas/graficaSemanalAgua.js"></script>
+<!--<script type="module" src="js/graficas/gSE2.js"></script>-->
 
 <script type="module" src="js/graficas/graficaMensualEnergy.js"></script>
 <script type="module" src="js/graficas/graficaMensualAgua.js"></script>
