--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -131,9 +131,10 @@
 
 <script src="js/controlVistas.js"></script>
 
-<script type="module" src="js/graficas/graficaSemanalEnergy.js"></script>
-<script type="module" src="js/graficas/graficaSemanalAgua.js"></script>
-<!--<script type="module" src="js/graficas/gSE2.js"></script>-->
+<!--<script type="module" src="js/graficas/graficaSemanalEnergy.js"></script>-->
+<!--<script type="module" src="js/graficas/graficaSemanalAgua.js"></script>-->
+<script type="module" src="js/graficas/graficaSEnergy2.js"></script>
+<script type="module" src="js/graficas/graficaSAgua2.js"></script>
 
 <script type="module" src="js/graficas/graficaMensualEnergy.js"></script>
 <script type="module" src="js/graficas/graficaMensualAgua.js"></script>
